Alignment fixes

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
 
 .app {
   width: auto;
+  height: 1000px;
   background-color: lightblue;
   font-family: Arial, sans-serif;
 }
@@ -14,7 +15,7 @@
   background-color: #1d3557;
   width: 100%;
   top: 0;
-  padding: 10px 20px;
+  padding: 0px 0px;
   position: fixed;
   z-index: 1000;
   border: 3px solid white;
@@ -45,7 +46,7 @@ p{
 }
 
 .search{
-  padding : 100px;
+  padding: 100px 100px 20px 100px;
   margin-top: 20px;
 }
 
@@ -66,73 +67,21 @@ select {
   padding: 5px;
   border-radius: 5px;
 } 
-.button-85 {
-  padding: 0.6em 2em;
-  border: none;
-  outline: none;
-  color: rgb(255, 255, 255);
-  background: #111;
-  cursor: pointer;
-  position: relative;
-  z-index: 0;
-  border-radius: 10px;
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
-}
 
-.button-85:before {
-  content: "";
-  background: linear-gradient(
-    45deg,
-    #ff0000,
-    #ff7300,
-    #fffb00,
-    #48ff00,
-    #00ffd5,
-    #002bff,
-    #7a00ff,
-    #ff00c8,
-    #ff0000
-  );
-  position: absolute;
-  top: -2px;
-  left: -2px;
-  background-size: 400%;
-  z-index: -1;
-  filter: blur(5px);
-  -webkit-filter: blur(5px);
-  width: calc(100% + 4px);
-  height: calc(100% + 4px);
-  animation: glowing-button-85 20s linear infinite;
-  transition: opacity 0.3s ease-in-out;
-  border-radius: 10px;
+.button {
+  background-color: #0a0a23;
+    color: #fff;
+    border: none;
+    border-radius: 10px;
+    padding: 10px;
+    
+    min-height: 30px;
+    min-width: 100px;
 }
-
-@keyframes glowing-button-85 {
-  0% {
-    background-position: 0 0;
-  }
-  50% {
-    background-position: 400% 0;
-  }
-  100% {
-    background-position: 0 0;
-  }
+.button:hover {
+  background-color:#1d3557;
+  transition: 0.7s;
 }
-
-.button-85:after {
-  z-index: -1;
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background: #222;
-  left: 0;
-  top: 0;
-  border-radius: 10px;
-}
-
 
 .input-field {
   width: 100%;
@@ -153,14 +102,15 @@ select {
 .flight-list {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-  grid-gap: 20px;
+  grid-gap: 8px;
+  padding-bottom:80px;
 }
 
 .flight-item {
   margin: 20px;
   background-color: brown;
   border: 1px solid #ccc;
-  padding: 10px;
+  padding: 6px;
   border-radius: 20px;
 }
 span{
@@ -182,18 +132,18 @@ label {
   bottom: 0;
   z-index: 1000;
   width: 100%;
-  padding: 8px;
 }
 .footer-sec1{
     display:flex;
     align-items: center;
     justify-content: space-between;
-    color:rgb(178,178,178);
+    margin-left:4px;
+    color:white;
     font-size:12px;
 }
 .footer-sec2{
     display:flex;
-    color:rgb(178,178,178);
+    color:white;
     margin-right :20px;
     justify-content: space-between;
     gap: 8px;
